se cambia la imágen principal

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="halloween.jpg" alt="">
+    <img src="pizap.jpg" alt="">
 </body>
 </html>
